--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,10 +10,10 @@ android {
     defaultConfig {
         applicationId "com.jerboa"
         namespace "com.jerboa"
-        minSdk 26
+        minSdk 21
         targetSdk 33
         versionCode 32
-        versionName "0.0.32"
+        versionName "0.0.32-rentler-lollipop-fork"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -50,6 +50,7 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
+        coreLibraryDesugaringEnabled true
     }
     kotlinOptions {
         jvmTarget = '17'
@@ -117,4 +118,7 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.4.3'
     debugImplementation 'androidx.compose.ui:ui-tooling:1.4.3'
     debugImplementation 'androidx.compose.ui:ui-test-manifest:1.4.3'
+
+    //for 5.0 compatibility with time functions
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
 }
