--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,10 +10,10 @@ android {
     defaultConfig {
         applicationId "com.jerboa"
         namespace "com.jerboa"
-        minSdk 26
+        minSdk 21
         targetSdk 33
         versionCode 34
-        versionName "0.0.34"
+        versionName "0.0.34-rentlar-lollipop-stabler"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         vectorDrawables {
@@ -55,6 +55,7 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_17
         targetCompatibility JavaVersion.VERSION_17
+        coreLibraryDesugaringEnabled true
     }
     kotlinOptions {
         jvmTarget = '17'
@@ -130,4 +131,7 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-test-manifest:1.4.3'
     implementation "net.engawapg.lib:zoomable:1.4.3"
     implementation 'androidx.browser:browser:1.5.0'
+
+    //for 5.0 compatibility with time functions
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:2.0.3'
 }
